<resources>
    <string name="app_name">MuSee</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_menu_options">MenuOptions</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_accessibility">AccessibilityActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_donate">DonateActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_donate_money_select">DonateMoneySelect</string>
    <string name="title_activity_donate_confirm_amount">DonateConfirmAmount</string>
    <string name="title_activity_donate_thank_you">DonateThankYou</string>
    <string name="title_activity_feedback_thank_you">FeedbackThankYou</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="title_activity_exhibit">ExhibitActivity</string>
    <string name="title_activity_exhibit_detail">ExhibitDetail</string>
    <string name="title_activity_favorites">FavoritesActivity</string>

    <string name="radio_1">Fabulous</string>
    <string name="radio_2">Amazing</string>
    <string name="radio_3">Seriously Cool</string>
    <string name="radio_4">Totes Awesome</string>
    <string name="btn_feedback">Submit</string>
    <string name="title_activity_donation_payment_info">DonationPaymentInfoActivity</string>
</resources>
