<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.uw.prathh.musee.feedback.FeedbackActivity"
    android:weightSum="1">

    <include layout="@layout/header_layout"
        android:id="@+id/header"
/>

    <RadioGroup
        android:id="@+id/radioFeedbackGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <RadioButton
        android:id="@+id/radio_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_1"
        android:checked="true"
        android:layout_gravity="center_horizontal" />
    <RadioButton
        android:id="@+id/radio_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_2"
        android:layout_gravity="center_horizontal" />
    <RadioButton
        android:id="@+id/radio_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_3"
        android:layout_gravity="center_horizontal" />
    <RadioButton
        android:id="@+id/radio_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_4"
        android:layout_gravity="center_horizontal" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Comments"
        android:id="@+id/commentText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="0.13" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_feedback"/>

</LinearLayout>
